@@ -22,7 +22,11 @@
 
         <skipITs>false</skipITs>
 
-        <!-- Docker properties -->
+        <!-- DT = Developer (Manual) Test; do not automatically execute during builds -->
+        <skipDTs>true</skipDTs>
+
+        <!-- Jib properties -->
+        <application.jib.defaultGoal>dockerBuild</application.jib.defaultGoal> <!-- dockerBuild for local only; build to push also -->
         <application.docker.skip>false</application.docker.skip>
         <application.docker.image>${application.docker.image.name}:${application.docker.image.tag}</application.docker.image>
         <!-- application.docker.image.name MUST be set by child modules that use jib-maven-plugin. -->
@@ -126,7 +130,7 @@
         <zjsonpatch.version>0.4.12</zjsonpatch.version>
         <mockito.version>4.8.0</mockito.version>
         <jupiter.version>5.9.0</jupiter.version>
-        <jib.version>3.2.1</jib.version>
+        <jib.version>3.3.1</jib.version>
         <surefire.version>3.0.0-M7</surefire.version>
         <failsafe.version>3.0.0-M7</failsafe.version>
         <zjsonpatch.version>0.4.12</zjsonpatch.version>
@@ -140,7 +144,7 @@
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
         <os-maven-plugin.version>1.6.2</os-maven-plugin.version>
-        <flows.gateway.grpc.version>1.3.2-whattheflow-44</flows.gateway.grpc.version>
+        <flows.gateway.grpc.version>LATEST</flows.gateway.grpc.version>
         <jayway-awaitility.version>1.7.0</jayway-awaitility.version>
         <awaitility.version>4.2.0</awaitility.version>
         <commons-csv.version>1.9.0</commons-csv.version>
@@ -208,6 +212,11 @@
                 <groupId>com.helger</groupId>
                 <artifactId>dhcp4java</artifactId>
                 <version>${dhcp4java.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.jayway.awaitility</groupId>
+                <artifactId>awaitility</artifactId>
+                <version>${jayway-awaitility.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.swrve</groupId>
@@ -712,6 +721,11 @@
             </dependency>
             <dependency>
                 <groupId>io.cucumber</groupId>
+                <artifactId>cucumber-junit-platform-engine</artifactId>
+                <version>${cucumber.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.cucumber</groupId>
                 <artifactId>cucumber-junit</artifactId>
                 <version>${cucumber.version}</version>
             </dependency>
@@ -942,6 +956,11 @@
                     <artifactId>jib-maven-plugin</artifactId>
                     <version>${jib.version}</version>
                     <configuration>
+                        <from>
+                            <!-- Make sure to use the hash of the manifest list (multi-arch) vs the hash of a particular manifest (single-arch) when updating
+                                 See https://github.com/docker/roadmap/issues/262#issuecomment-1161515179 for an example on how to do this -->
+                            <image>eclipse-temurin:17-jre@sha256:c61c6a48364d05ea89504489aecddd8af8c32dba6df2257da4131fe244284f50</image>
+                        </from>
                         <!--suppress MavenModelInspection -->
                         <skip>${application.docker.skip}</skip>
                         <to>
@@ -958,6 +977,68 @@
                     <groupId>org.apache.karaf.tooling</groupId>
                     <artifactId>karaf-maven-plugin</artifactId>
                     <version>${karaf.maven-plugin.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>${failsafe.version}</version>
+                    <executions>
+                        <execution>
+                            <id>horizon-integration-test</id>
+                            <goals>
+                                <goal>integration-test</goal>
+                            </goals>
+                            <phase>integration-test</phase>
+                            <configuration>
+                                <skipITs>${skipITs}</skipITs>
+                                <excludes>
+                                    <exclude>none</exclude>
+                                </excludes>
+                                <includes>
+                                    <include>**/*IT.java</include>
+                                </includes>
+                            </configuration>
+                        </execution>
+
+                        <execution>
+                            <id>horizon-developer-test</id>
+                            <goals>
+                                <goal>integration-test</goal>
+                            </goals>
+                            <phase>integration-test</phase>
+                            <configuration>
+                                <skipITs>${skipDTs}</skipITs>
+                                <excludes>
+                                    <exclude>**/*IT.java</exclude>
+                                </excludes>
+                                <includes>
+                                    <include>**/*DT.java</include>
+                                </includes>
+                                <argLine>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+                                    --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+                                    --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                                    --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+                                    --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+                                    --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+                                    --add-opens=java.base/java.io=ALL-UNNAMED
+                                    --add-opens=java.base/java.nio=ALL-UNNAMED
+                                    --add-opens=java.base/java.util=ALL-UNNAMED
+                                    --add-opens=java.base/java.lang=ALL-UNNAMED
+                                    --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                                </argLine>
+                            </configuration>
+                        </execution>
+
+                        <!-- Fail the build on IT Failures.  Executed as a separate step so that post-integration-test -->
+                        <!--  phase executes even after an IT failure.                                                 -->
+                        <execution>
+                            <id>horizon-verify-it</id>
+                            <goals>
+                                <goal>verify</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -1006,6 +1087,17 @@
             <properties>
                 <skipITs>true</skipITs>
                 <features.verify.skip>true</features.verify.skip> <!-- built-in property of karaf-maven-plugin -->
+            </properties>
+        </profile>
+
+        <profile>
+            <id>cicd</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <!-- Build AND push the built image -->
+                <application.jib.defaultGoal>build</application.jib.defaultGoal>
             </properties>
         </profile>
     </profiles>
